# gnu_barcode

./: .gitignore  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  barcode.h  bootstrap  bootstrap.conf  cmdline.c  cmdline.h  codabar.c  code11.c  code128.c  code39.c  code93.c  configure  configure.ac  configure.in  ean.c  i25.c  library.c  main.c  msi.c  pcl.c  plessey.c  ps.c  sample.c  svg.c
bookland/: bookland.py
debian/: changelog  files  substvars
doc/: Makefile  Makefile.am  Makefile.in  barcode.texi  doc.barcode  manpager  mktxt
lib/: Makefile.am
po/: POTFILES.in
